sas-core/main/default/objects/IRR_Manual_Icoupon_Voucher__mdt/IRR_Manual_Icoupon_Voucher__mdt.object-meta.xml
<CustomObject>
    <label>Manual Icoupon Voucher</label>
    <pluralLabel>Manual Icoupon Vouchers</pluralLabel>
</CustomObject>