sas-core/main/default/objects/IRR_Manual_Icoupon_Voucher__mdt/fields/IRR_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>IRR_Currency_Code__c</fullName>
    <label>IRR Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
                <default>true</default>
                <label>EUR</label>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>KR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>ISK</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>SEK</fullName>
            </value>
            <value>
                <fullName>CZK</fullName>
            </value>
            <value>
                <fullName>DKK</fullName>
            </value>
            <value>
                <fullName>LEK</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>HUF</fullName>
            </value>
            <value>
                <fullName>PLN</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>