sas-core/main/default/objects/IRR_Manual_Icoupon_Voucher__mdt/fields/IRR_Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>IRR_Reason_Comment__c</fullName>
    <label>Reason Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>