sas-core/main/default/objects/IRR_Manual_Icoupon_Voucher__mdt/fields/IRR_Voucher_Amount__c.field-meta.xml
<CustomField>
    <fullName>IRR_Voucher_Amount__c</fullName>
    <label>IRR Voucher Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>