sas-core/main/default/objects/IRR_Manual_Icoupon_Voucher__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
                <default>true</default>
                <label>Currency</label>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>